# agent-graph-studio

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: finish-feature.md  implement-spec.md  start-spec.md
backend/: Dockerfile
backend/api/: app.py  runs.py  schemas.py
backend/auth/: __init__.py  errors.py  google_oauth.py  jwt.py
backend/cli/: main.py
docs/: DEPLOYMENT.md
examples/: 1_ingest.json  2_query.json  3_support_assistant.json  delivery_support_agent.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
tests/: conftest.py  fakes.py  test_agent_node.py  test_api.py  test_canvas_approvals.py  test_canvas_ux_parity.py  test_cli.py  test_code_node.py  test_conditional_branch_node.py  test_connections.py  test_connections_api.py  test_engine_concurrency.py  test_engine_optional_inputs.py  test_execution.py  test_execution_failure.py  test_fanout_node.py  test_graph_persistence.py  test_ingest_document_node.py  test_llm_call_node.py  test_loop_node.py  test_mcp_call_node.py  test_mcp_client.py  test_mcp_server_integrations.py  test_merge_node.py  test_ollama_client.py  test_platform_auth.py  test_production_hardening.py  test_registry.py  test_run_persistence.py  test_schema.py  test_telegram_manifest_nodes.py  test_topo.py  test_trigger_nodes.py  test_triggers_api.py  test_uppercase_text_node.py  test_validation.py  test_vector_search_node.py  test_vector_store_connection.py  test_webhook_sync.py
(+139 files in other folders)
