[project]
name = "agent-graph-studio"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "anthropic>=0.40",
    "mcp>=1.28.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
agent-graph-studio = "backend.cli.main:cli_entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
